--- a/views/boards/frees/edit.ejs
+++ b/views/boards/frees/edit.ejs
@@ -20,5 +20,6 @@
       <%- include('../../partials/boards/edit/form') %>
 
     </div>
+    <%- include('../partials/footer') %>
   </body>
 </html>
