--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,12 +1,15 @@
 @import url(//fonts.googleapis.com/earlyaccess/nanumpenscript.css);
+@import url('https://fonts.googleapis.com/css2?family=Dokdo&display=swap');
 
 body {
   font-family: 'Open Sans', sans-serif;
 }
+
 .breadcrumb-item {
   font-size: 0.8em !important;
 }
-.ellipsis{
+
+.ellipsis {
   display: block;
   width: 100%;
   white-space: nowrap;
@@ -14,77 +17,52 @@ body {
   text-overflow: ellipsis;
 }
 
-
-.navbar-brand
-{
+.navbar-brand {
   font-size: 2.0em;
   font-family: 'Nanum Pen Script', cursive;
 }
 
-img
-{
+img {
   max-width: 40%;
-   height: auto;
-
-
+  height: auto;
 }
 
+font.title{
+  font-size:36px;
+  font-family: 'Dokdo', cursive;
+}
 
 div.about {
   border-style: solid;
-  width : 500px;
-   border-width:  0 0 0px 0px;
-   padding: 12px;
-   word-break: break-all;
+  width: 500px;
+  border-width: 0 0 0px 0px;
+  padding: 12px;
+  word-break: break-all;
+}
 
-
-    }
-
-
-.minitable
-{
-
+.minitable {
 
 }
 
+div.minititle {
+  width: 50%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 .board-table {
-/*  table-layout: fixed;*/
-
+  /*  table-layout: fixed;*/
   overflow-x: auto;
   margin-left: auto;
-    margin-right: auto;
+  margin-right: auto;
 }
 
-
-/* .notification-container {
-    position: relative;
-    width: 16px;
-    height: 16px;
-    top: 15px;
-    left: 15px;
-
-    i {
-        color: #fff;
-    }
-}
-
-.notification-counter {
-    position: relative;
-    top: -40px;
-    left: 40px;
-
-    background-color: rgba(212, 19, 13, 1);
-    color: #fff;
-    border-radius: 3px;
-    padding: 1px 3px;
-    font: 8px Verdana;
-} */
-
-.post-body{
+.post-body {
   white-space: pre-line;
 }
-.post-info{
+
+.post-info {
   font-size: 0.8em;
 }
 
@@ -95,44 +73,40 @@ div.about {
 
 .comment-edit,
 .comment-edit-enabled .comment-show {
-  display:none;
+  display: none;
 }
 
 .comment-edit-enabled .comment-edit {
-  display:inherit;
+  display: inherit;
 }
 
 .user-form {
   width: 400px;
 }
-.board-table .title
-{
-  width : 400px;
+
+.board-table .title {
+  width: 400px;
   text-align: center;
   overflow-x: auto;
 }
 
-.board-table .views
-{
-  width : 30px;
+.board-table .views {
+  width: 30px;
   text-align: center;
   overflow-x: auto;
 }
 
-.board-table .author
-{
-  width : 100px;
+.board-table .author {
+  width: 100px;
   text-align: center;
-
 }
 
-.board-table .date
-{
+.board-table .date {
   width: 80px;
   text-align: center;
 }
-.board-table .likes
-{
+
+.board-table .likes {
   width: 30px;
   text-align: center;
   overflow-x: auto;
@@ -140,26 +114,28 @@ div.about {
 
 .small {
   font-size: smaller;
-  color : red;
+  color: red;
 }
 
 .button {
   color: white;
-  display: inline-block; /* Inline elements with width and height. TL;DR they make the icon buttons stack from left-to-right instead of top-to-bottom */
-  position: relative; /* All 'absolute'ly positioned elements are relative to this one */
-  padding: 2px 5px; /* Add some padding so it looks nice */
+  display: inline-block;
+  /* Inline elements with width and height. TL;DR they make the icon buttons stack from left-to-right instead of top-to-bottom */
+  position: relative;
+  /* All 'absolute'ly positioned elements are relative to this one */
+  padding: 2px 5px;
+  /* Add some padding so it looks nice */
 }
 
 .button__badge {
   background-color: #fa3e3e;
   border-radius: 2px;
   color: white;
-
   padding: 6px 6px;
   border-radius: 6px;
   font-size: 10px;
-
-  position: absolute; /* Position the badge within the relatively positioned button */
+  position: absolute;
+  /* Position the badge within the relatively positioned button */
   top: 12px;
   right: -2px;
 }
