--- a/views/boards/frees/index.ejs
+++ b/views/boards/frees/index.ejs
@@ -11,7 +11,7 @@
   <div class="container mb-3">
 
     <h2 class="mb-3">자유 게시판</h2>
-    <small>익명 자유 게시판!<br> 너무 과도한 비방은 삭제될 수 있습니다.</small>
+    <small>소중한 이웃과의 소통 공간입니다. 과도한 욕설 및 비방은 자제해주세요.</small>
 
       <%- include('../../partials/boards/index/board-table') %>
 
@@ -25,6 +25,7 @@
       <%- include('../../partials/boards/index/post-count') %>
 
   </div>
+  <%- include('../../partials/footer') %>
 </body>
 
 </html>
