--- a/views/boards/notices/index.ejs
+++ b/views/boards/notices/index.ejs
@@ -12,7 +12,7 @@
 
     <h2 class="mb-3">공지사항</h2>
 
-    <small>관리자만 게시글을 쓸 수 있습니다. 댓글은 쓸 수 있어요!</small>
+    <small>관리자만 게시글을 작성할 수 있습니다. 댓글은 이용할 수 있어요!</small>
 
     <%- include('../../partials/boards/index/board-table') %>
 
@@ -26,6 +26,7 @@
     <%- include('../../partials/boards/index/post-count') %>
 
   </div>
+  <%- include('../../partials/footer') %>
 </body>
 
 </html>
