--- a/views/boards/trades/index.ejs
+++ b/views/boards/trades/index.ejs
@@ -11,7 +11,7 @@
   <div class="container mb-3">
 
     <h2 class="mb-3">장터 게시판</h2>
-    <small>집에 안쓰는 물건을 팔아보세요!</small>
+    <small>이웃과 안쓰는 물건을 거래해보세요!</small>
 
     <%- include('../../partials/boards/index/board-table') %>
 
@@ -25,6 +25,7 @@
     <%- include('../../partials/boards/index/post-count') %>
 
   </div>
+  <%- include('../../partials/footer') %>
 </body>
 
 </html>
