--- a/views/dm/index.ejs
+++ b/views/dm/index.ejs
@@ -10,7 +10,7 @@
   <%- include('../partials/nav') %>
 
   <div class="container">
-    <h3 class="text-center">Messaging</h3>
+    <!-- <h3 class="text-center">Messaging</h3> -->
     <div class="messaging">
       <div class="inbox_msg">
         <div class="inbox_people">
@@ -22,7 +22,7 @@
               <div class="stylish-input-group">
                 <input type="text" class="search-bar" placeholder="Search">
                 <span class="input-group-addon">
-                  <button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
+                  <button id="srch_btn" type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
                 </span> </div>
             </div>
           </div>
@@ -36,13 +36,9 @@
           <div class="msg_history">
             <!-- messages will be appended here -->
           </div>
-          <div>
-            <input type="file" name="attachment" class="form-control-file" id="attachment">
-          </div>
           <div class="type_msg">
             <div class="input_msg_write">
               <input type="text" class="write_msg" placeholder="Type a message" />
-              <button class="img_upload_btn" type="button"><i class="far fa-image" aria-hidden="true"></i></button>
               <button class="msg_send_btn" type="button"><i class="far fa-paper-plane" aria-hidden="true"></i></button>
             </div>
           </div>
@@ -53,6 +49,7 @@
 
     </div>
   </div>
+  <%- include('../partials/footer') %>
   <%- include('./partials/chat-socket') %>
 </body>
 
