--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -17,7 +17,7 @@
 
       <div class="form-group row">
         <label for="username" class="col-sm-3 col-form-label">아이디
-            <small style="color:red">*</small>
+          <small style="color:red">*</small>
         </label>
         <div class="col-sm-9">
           <input type="text" id="username" name="username" value="<%= user.username %>" class="form-control <%= (errors.username)?'is-invalid':'' %>"> <!-- 1, 2 -->
@@ -25,7 +25,7 @@
           <!-- 3 -->
           <span class="invalid-feedback"><%= errors.username.message %></span>
           <% } %>
-          <small>영문 4~12 글자.</small>
+          <small>영문, 숫자 포함 4~12 글자 이내</small>
         </div>
       </div>
 
@@ -40,7 +40,7 @@
           <!-- 3 -->
           <span class="invalid-feedback"><%= errors.name.message %></span>
           <% } %>
-          <small> 실명과 주소를 대조해서 인증해드립니다. </small>
+          <small> 사용자 인증을 위해 실명을 입력해주세요. </small>
         </div>
       </div>
 
@@ -56,7 +56,7 @@
           <!-- 3 -->
           <span class="invalid-feedback"><%= errors.nickname.message %></span>
           <% } %>
-          <small> 다른사용자에게 보여질 이름입니다. </small>
+          <small> 다른 사용자에게 보여질 이름입니다. </small>
         </div>
       </div>
       <div class="form-group row">
@@ -73,20 +73,20 @@
       </div>
       <div class="form-group row">
         <label for="addr" class="col-sm-3 col-form-label">주소
-        <small style="color:red">*</small>
+          <small style="color:red">*</small>
         </label>
         <div class="col-sm-9">
           <input type="text" id="addr" name="addr" value="<%= user.addr %>" class="form-control <%= (errors.addr)?'is-invalid':'' %>"> <!-- 1, 2 -->
           <% if(errors.addr){ %>
           <span class="invalid-feedback"><%= errors.addr.message %></span>
           <% } %>
-          <small>현재 거주중인 동, 호 수를 정확히 입력해주세요!( 인증받지 못한 아이디는 장터게시판을 이용하실 수 없습니다.)</small>
+          <small>사용자 인증을 위해 현재 거주중인 동, 호 수를 정확히 입력해주세요. (미인증 시 사이트 이용이 제한됩니다.)</small>
         </div>
       </div>
 
       <div class="form-group row">
         <label for="password" class="col-sm-3 col-form-label">비밀번호
-        <small style="color:red">*</small>
+          <small style="color:red">*</small>
         </label>
         <div class="col-sm-9">
           <input type="password" id="password" name="password" value="" class="form-control <%= (errors.password)?'is-invalid':'' %>"> <!-- 1, 2 -->
@@ -94,7 +94,7 @@
           <!-- 3 -->
           <span class="invalid-feedback"><%= errors.password.message %></span>
           <% } %>
-          <small>영문 숫자 조합 4~16글자</small>
+          <small>영문, 숫자, 특수문자 조합 4~16글자</small>
         </div>
       </div>
       <div class="form-group row">
@@ -129,6 +129,7 @@
     </form>
 
   </div>
+  <%- include('../partials/footer') %>
 </body>
 
 </html>
