--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,45 +1,49 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <%- include('../partials/head') %>
-  </head>
-  <body>
-    <%- include('../partials/nav') %>
 
-    <div class="container mb-3">
+<head>
+  <%- include('../partials/head') %>
+</head>
 
-      <h3 class="contentBoxTop"><%= user.username %></h3>
-      <form class="user-form" action="/users" method="post">
-        <fieldset disabled>
-          <div class="form-group row">
-            <label for="name" class="col-sm-3 col-form-label">닉네임</label>
-            <div class="col-sm-9">
-              <input class="form-control" type="text" id="name" name="name" value="<%= user.name %>">
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="email" class="col-sm-3 col-form-label">이메일</label>
-            <div class="col-sm-9">
-              <input class="form-control" type="text" id="email" name="email" value="<%= user.email %>">
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="addr" class="col-sm-3 col-form-label">주소(몇호)</label>
-            <div class="col-sm-9">
-              <input class="form-control" type="text" id="addr" name="addr" value="<%= user.addr %>">
-            </div>
-          </div>
-        </fieldset>
-      </form>
+<body>
+  <%- include('../partials/nav') %>
 
-      <div>
-        <a class="btn btn-primary" href="/users">뒤로가기</a>
-        <a class="btn btn-primary" href="/users/<%= user.username %>/edit">수정하기</a>
-        <!-- <form action="/users/<%= user.username %>?_method=delete" method="post" class="d-inline">
+  <div class="container mb-3">
+
+    <h3 class="contentBoxTop"><%= user.username %></h3>
+    <form class="user-form" action="/users" method="post">
+      <fieldset disabled>
+        <div class="form-group row">
+          <label for="name" class="col-sm-3 col-form-label">닉네임</label>
+          <div class="col-sm-9">
+            <input class="form-control" type="text" id="name" name="name" value="<%= user.name %>">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="email" class="col-sm-3 col-form-label">이메일</label>
+          <div class="col-sm-9">
+            <input class="form-control" type="text" id="email" name="email" value="<%= user.email %>">
+          </div>
+        </div>
+        <div class="form-group row">
+          <label for="addr" class="col-sm-3 col-form-label">주소(몇호)</label>
+          <div class="col-sm-9">
+            <input class="form-control" type="text" id="addr" name="addr" value="<%= user.addr %>">
+          </div>
+        </div>
+      </fieldset>
+    </form>
+
+    <div>
+      <a class="btn btn-primary" href="/users">뒤로가기</a>
+      <a class="btn btn-primary" href="/users/<%= user.username %>/edit">수정하기</a>
+      <!-- <form action="/users/<%= user.username %>?_method=delete" method="post" class="d-inline">
           <a class="btn btn-primary" href="javascript:void(0)" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">지우기</a>
         </form> -->
-      </div>
-
     </div>
-  </body>
+
+  </div>
+  <%- include('../partials/footer') %>
+</body>
+
 </html>
