--- a/views/boards/frees/new.ejs
+++ b/views/boards/frees/new.ejs
@@ -21,7 +21,7 @@
     <%- include('../../partials/boards/new/form') %>
 
   </div>
-  <%- include('../partials/footer') %>
+  <%- include('../../partials/footer') %>
 </body>
 
 </html>
