--- a/views/boards/frees/show.ejs
+++ b/views/boards/frees/show.ejs
@@ -25,7 +25,7 @@
     <%- include('../../partials/boards/show/comments') %>
 
   </div>
-  <%- include('../partials/footer') %>
+  <%- include('../../partials/footer') %>
 </body>
 
 </html>
