--- a/views/boards/notices/new.ejs
+++ b/views/boards/notices/new.ejs
@@ -19,6 +19,6 @@
       <%- include('../../partials/boards/new/form') %>
 
     </div>
-    <%- include('../partials/footer') %>
+    <%- include('../../partials/footer') %>
   </body>
 </html>
