--- a/views/boards/trades/edit.ejs
+++ b/views/boards/trades/edit.ejs
@@ -20,6 +20,6 @@
       <%- include('../../partials/boards/edit/form') %>
 
     </div>
-    <%- include('../partials/footer') %>
+    <%- include('../../partials/footer') %>
   </body>
 </html>
