--- a/views/boards/trades/show.ejs
+++ b/views/boards/trades/show.ejs
@@ -30,7 +30,7 @@
     <%- include('../../partials/boards/show/comments') %>
 
   </div>
-  <%- include('../partials/footer') %>
+  <%- include('../../partials/footer') %>
 </body>
 
 </html>
