fixed errors and misbehaviors

--- a/views/home/welcome.ejs
+++ b/views/home/welcome.ejs
@@ -29,7 +29,7 @@
             <a href="/boards/notices/<%= post._id %>"><%= post.title %></a>
           </div>
           <div class="best-posts author">
-            <%= post.author ? post.author.name : "" %>
+            <%= post.author ? post.author.nickname : "" %>
           </div>
           <div class="best-posts likes">
             <i class='far fa-thumbs-up' style='font-size:12px'></i> <%= post.likes %>
@@ -54,7 +54,7 @@
             <a href="/boards/notices/<%= post._id %>"><%= post.title %></a>
           </div>
           <div class="best-posts author">
-            <%= post.author ? post.author.name : "" %>
+            <%= post.author ? post.author.nickname : "" %>
           </div>
           <div class="best-posts likes">
             <i class='far fa-thumbs-up' style='font-size:12px'></i> <%= post.likes %>
@@ -79,7 +79,7 @@
             <a href="/boards/notices/<%= post._id %>"><%= post.title %></a>
           </div>
           <div class="best-posts author">
-            <%= post.author ? post.author.name : "" %>
+            <%= post.author ? post.author.nickname : "" %>
           </div>
           <div class="best-posts likes">
             <i class='far fa-thumbs-up' style='font-size:12px'></i> <%= post.likes %>
