--- a/views/partials/boards/index/board-table.ejs
+++ b/views/partials/boards/index/board-table.ejs
@@ -29,7 +29,7 @@
       </td>
       <td class="author">
         <!-- 2 -->
-        <div class="ellipsis"><%= post.author ? post.author.name : "" %></div>
+        <div class="ellipsis"><%= post.author ? post.author.nickname : "" %></div>
       </td>
       <td class="date">
         <span data-date="<%= post.createdAt %>"><%= post.createdAt %></span>
