user new page translate korean

--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -25,7 +25,7 @@
           <!-- 3 -->
           <span class="invalid-feedback"><%= errors.username.message %></span>
           <% } %>
-          <small>영문 4~12 글자.</small>
+          <small>영문, 숫자4~12 글자.</small>
         </div>
       </div>
 
