--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -31,6 +31,7 @@
               <span class="button__badge"></span>
             </i>
           </a>
+          <%- include('./socket') %>
         </li>
         <li class="nav-item"><a href="/users/<%= currentUser.username %>" class="nav-link">내 계정</a></li>
         <li class="nav-item"><a href="/logout" class="nav-link">로그아웃</a></li>
