--- a/views/dm/index.ejs
+++ b/views/dm/index.ejs
@@ -10,7 +10,7 @@
   <%- include('../partials/nav') %>
 
   <div class="container">
-    <!-- <h3 class="text-center">Messaging</h3> -->
+    <h6 class="text-center">개인 정보는 절대 채팅을 통해 유출하지 마세요 !!! </h6>
     <div class="messaging">
       <div class="inbox_msg">
         <div class="inbox_people">
