password no symbols

--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -94,7 +94,7 @@
           <!-- 3 -->
           <span class="invalid-feedback"><%= errors.password.message %></span>
           <% } %>
-          <small>영문, 숫자, 특수문자 조합 4~16글자</small>
+          <small>영문, 숫자 조합 4~16글자</small>
         </div>
       </div>
       <div class="form-group row">
