changed footer website address

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,7 +3,7 @@
 <div class="fixed-bottom">
   <footer class="footer bg-light">
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="http://www.ourneighborstory.cf/"> www.ourneighborstory.cf</a>
+      <a href="http://www.ourneighborstory.com/"> www.ourneighborstory.com</a>
     </div>
     <!-- Copyright -->
 
