--- a/views/bills/admin.ejs
+++ b/views/bills/admin.ejs
@@ -2,30 +2,112 @@
 <html>
 
 <head>
-  <%- include('../../partials/head') %>
+  <%- include('../partials/head') %>
 </head>
 
 <body>
-  <%- include('../../partials/nav') %>
+  <%- include('../partials/nav') %>
 
   <div class="container mb-3">
 
-    <h2 class="mb-3">자유 게시판</h2>
-    <small>소중한 이웃과의 소통 공간입니다. 과도한 욕설 및 비방은 자제해주세요.</small>
+    <h2 class="mb-3">고지서 관리</h2>
 
-      <%- include('../../partials/boards/index/board-table') %>
+    <table class="board-table table table-sm border-bottom">
+
+      <thead class="thead-light">
+        <tr>
+          <th scope="col" class="title"> 제목 </th>
+          <th scope="col" class="receiver"> 받는이 </th>
+          <th scope="col" class="author"> 작성자 </th>
+          <th scope="col" class="date"> 작성일 </th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <% if(bills == null || bills.length == 0){ %>
+        <tr>
+          <td colspan=100> 아직 고지서가 없어요:( </td>
+        </tr>
+        <% } %>
+        <% bills.forEach(function(bill) { %>
+        <tr>
+          <td>
+            <div class="ellipsis">
+            <a href="/bills/<%= bill._id %>" style="color:#000000"><%= bill.title %></a>
+            </div>
+          </td>
+          <td class="receiver">
+            <!-- 2 -->
+            <div class="ellipsis"><%= bill.receiver ? bill.receiver : "" %></div>
+          </td>
+          <td class="author">
+            <!-- 2 -->
+            <div class="ellipsis"><%= bill.author ? bill.author : "" %></div>
+          </td>
+          <td class="date">
+            <span data-date="<%= bill.createdAt %>"><%= bill.createdAt %></span>
+          </td>
+        </tr>
+        <% }) %>
+      </tbody>
+
+    </table>
 
     <div class="row mb-3">
 
-      <%- include('../../partials/boards/index/new-button') %>
-      <%- include('../../partials/boards/index/page-number') %>
+      <div class="col-2">
+
+        <% if(isAuthenticated){ %>
+        <a class="btn btn-primary" href="/bills/new">새 고지서</a>
+        <% } %>
+      </div>
+      
+      <nav class="col-8">
+        <%
+           var offset = 2;
+           var previousBtnEnabled = currentPage>1;
+           var nextBtnEnabled = currentPage<maxPage;
+         %>
+
+        <ul class="pagination pagination-sm justify-content-center align-items-center h-100 mb-0">
+          <li class="page-item <%= previousBtnEnabled?'':'disabled' %>">
+            <a class="page-link" href="/bills/user?page=<%= currentPage-1 %>&limit=<%= limit %>"
+              <%= previousBtnEnabled?'':'tabindex=-1' %>>«</a>
+          </li>
+          <% for(i=1;i<=maxPage;i++){ %>
+          <% if(i==1 || i==maxPage || (i>=currentPage-offset && i<=currentPage+offset)){ %>
+          <li class="page-item <%= currentPage==i?'active':'' %>"><a class="page-link"
+              href="/bills/user?page=<%= i %>&limit=<%= limit %>"> <%= i %> </a></li>
+          <% } else if(i==2 || i==maxPage-1){ %>
+          <li><a class="page-link">...</a></li>
+          <% } %>
+          <% } %>
+          <li class="page-item <%= nextBtnEnabled?'':'disabled' %>">
+            <a class="page-link" href="/bills/user?page=<%= currentPage+1 %>&limit=<%= limit %>"
+              <%= nextBtnEnabled?'':'tabindex=-1' %>>»</a>
+          </li>
+        </ul>
+      </nav>
 
     </div>
 
-      <%- include('../../partials/boards/index/post-count') %>
+    <form action="/bills/admin" method="get">
 
+      <div class="form-row">
+
+        <div class="form-group col-3">
+          <label>보기</label>
+          <select name="limit" class="custom-select" onchange="this.parentElement.parentElement.parentElement.submit()">
+            <option value="5" <%= limit==5?'selected':'' %>>5 게시글</option>
+            <option value="10" <%= limit==10?'selected':'' %>>10 게시글</option>
+            <option value="20" <%= limit==20?'selected':'' %>>20 게시글</option>
+          </select>
+        </div>
+
+      </div>
+    </form>
   </div>
-  <%- include('../../partials/footer') %>
+  <%- include('../partials/footer') %>
 </body>
 
 </html>
