--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -23,7 +23,7 @@
         <% if(isAuthenticated){ %>
 
         <% if(currentUser.isAdmin){ %>
-        <li class="nav-item"><a href="/users" class="nav-link">관리자 페이지</a></li>
+        <li class="nav-item"><a href="/users" class="nav-link">유저 관리</a></li>
         <% } %>
         <% if(currentUser.isAdmin){ %>
         <li class="nav-item"><a href="/bills/admin" class="nav-link">고지서 관리</a></li>
